chore: substitui List.of po Arrays.asList